<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pp.rafix.e_emergency_2_0_2.fragments.PatientDataFragment"
    android:orientation="vertical">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/tableLayout"
        android:rowCount="15"
        android:columnCount="3"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_name"
            android:id="@+id/textView2"
            android:layout_column="0"
            android:autoText="false"
            android:longClickable="false"
            android:layout_row="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:layout_row="0"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_name"
            android:id="@+id/checkBoxNoName"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/last_name"
            android:id="@+id/textView9"
            android:layout_column="0"
            android:layout_row="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextSurname"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/age"
            android:id="@+id/textView10"
            android:layout_column="0"
            android:layout_row="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:maxEms="4"
            android:maxLength="3"
            android:id="@+id/editTextAge"
            android:layout_row="2"
            android:layout_column="1"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sex"
            android:id="@+id/textView11"
            android:layout_column="0"
            android:layout_row="3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="3"
            android:layout_column="1"
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal"
            android:id="@+id/radioGroupSex">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:id="@+id/radioButtonWoman"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:id="@+id/radioButtonMan"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone_nr"
            android:id="@+id/textView12"
            android:layout_column="0"
            android:layout_row="4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhoneNr"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pesel"
            android:id="@+id/textView13"
            android:layout_column="0"
            android:layout_row="5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="11"
            android:id="@+id/editTextPesel"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/insurance_nr"
            android:id="@+id/textView14"
            android:layout_column="0"
            android:layout_row="6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextInsuranceNr"
            android:layout_row="6"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identify"
            android:id="@+id/buttonIdentify"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical|fill"
            android:gravity="center" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement_on_help"
            android:id="@+id/checkBoxAgreementOnHelp"
            android:layout_row="7"
            android:layout_column="0"
            android:checked="false"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help_date_and_time"
            android:id="@+id/textView"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_columnSpan="3">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextDate" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="5"
                android:id="@+id/editTextTime" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/destination_sor"
            android:id="@+id/textView3"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sace_changes"
            android:id="@+id/buttonSaveChanges"
            android:layout_row="12"
            android:layout_column="2" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDestinationSOR"
            android:layout_row="11"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:spinnerMode="dropdown" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival"
        android:id="@+id/buttonArrival"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/tableLayout"
        android:layout_alignLeft="@+id/tableLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_transport"
        android:id="@+id/buttonNoTransport"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/buttonArrival"
        android:layout_toRightOf="@+id/buttonArrival" />

</RelativeLayout>
